# geniex-qairt-plugin

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODEOWNERS  README.md  build_android.sh  repolint.json
.github/workflows/: Readme.md  build-and-test.yml  build-check.yml  coverage.yml  lint.yml
core/include/: threadpool.h  types.h  utils.h  version.h
core/include/llm/: input_provider.h  llm_model.h  llm_spec_loader.h  llm_types.h  llm_utils.h
core/include/pipeline/: chat_template.h  llm_pipeline.h
core/include/vlm/: vlm_input_provider.h
core/src/: graph.cpp  threadpool.cpp  utils.cpp
core/src/llm/: input_provider.cpp  llm_model.cpp  llm_spec_loader.cpp  llm_utils.cpp
core/src/pipeline/: chat_template.cpp  llm_pipeline.cpp  vlm_pipeline.cpp
core/src/vlm/: vlm_input_provider.cpp  vlm_model.cpp
docs/: README.md  engineering_principle.md
examples/continuous_batching/common/cb/: cb_llm_model.h
examples/continuous_batching/llama3_2/: llama3_2_cb.h  llama3_2_cb_example.cpp
examples/continuous_batching/qwen3/: qwen3_cb.h  qwen3_cb_example.cpp
models/: dispatch.h  llm_model_registry.h
models/falcon3/: falcon3.h  falcon3_7b_example.cpp
models/llama3/: CMakeLists.txt  llama3.h  llama3_1_8b_example.cpp  llama3_2_1b_example.cpp  llama3_2_3b_example.cpp  llama_v3_8b_instruct_example.cpp  llama_v3_elyza_jp_8b_example.cpp  llama_v3_taide_8b_chat_example.cpp  sea_lion_8b_example.cpp
models/llama3_1/: llama3_1.h  llama3_1_8b_example.cpp  sea_lion_8b_example.cpp
models/llama3_2/: llama3_2.h  llama3_2_1b_example.cpp  llama3_2_3b_example.cpp
models/llama3_2_ssd/: llama3_2_ssd.h  llama3_2_ssd_example.cpp  ssd_model.cpp  ssd_types.h
models/phi3_5/: phi3_5.h  phi3_5_example.cpp
models/qwen2-omni/: qwen2_omni.cpp  qwen2_omni_example.cpp
models/qwen2_5/: qwen2_5.h  qwen2_5_7b_instruct_example.cpp
models/qwen2_5_vl/: CMakeLists.txt  qwen2_5_vl.cpp  qwen2_5_vl.h  qwen2_5_vl_7b_example.cpp  qwen2_5_vl_7b_pipeline.cpp
models/qwen3/: qwen3.h  qwen3_4b_example.cpp  qwen3_4b_instruct_2507_example.cpp  qwen3_4b_xtensor_example.cpp
models/qwen3_vl/: CMakeLists.txt  qwen3_vl.cpp  qwen3_vl.h  qwen3_vl_4b_example.cpp  qwen3_vl_4b_pipeline.cpp
qnn-api/include/: MmappedFile.hpp  MmappedReader.hpp  QnnSdkBuildId.h
qnn-api/src/: BackendExtensions.cpp  BackendExtensions.hpp  ClientBuffer.cpp  ClientBuffer.hpp  DmaBufAllocator.cpp  DmaBufAllocator.hpp  IBackend.hpp  IOTensor.cpp  IOTensor.hpp  Log.hpp  MmappedFile.cpp  MmappedReader.cpp  QnnApi.cpp  QnnApi.hpp  QnnApiUtils.cpp  QnnApiUtils.hpp  QnnConfig.hpp  QnnTypeMacros.hpp  QnnWrapperUtils.hpp  RpcMem.cpp  RpcMem.hpp  qnn-utils.cpp  qnn-utils.hpp
qnn-api/src/config/: Config.hpp  ConfigList.hpp  ConfigPrintUtilities.cpp  ConfigPrintUtilities.hpp  ContextConfig.cpp  ContextConfig.hpp
qnn-api/src/utils/: performance_profile.hpp
qnn-api/src/utils/detail/: json.hpp  utils.hpp
scripts/: README.md  coverage.ps1  coverage_common.py  diff_coverage.py
tests/: CMakeLists.txt  README.md  llm.cpp  vlm.cpp
tests/core/: graph_test.cpp  utils_test.cpp
tests/core/llm/: input_provider_test.cpp  llm_model_test.cpp
tests/testing/: graph_info_builder.hpp  llm_fixture.hpp  stub_qnnapi.cpp
